--- a/index.html
+++ b/index.html
@@ -86,27 +86,28 @@
   <!-- Features -->
 
   <section id="features">
+    <div class="container-fluid">
+      <div class="row">
 
-    <div class="row">
+        <div class="feature-box col-lg-4">
+          <i class="fas fa-check-circle fa-4x"></i>
+          <h3>Easy to use.</h3>
+          <p>So easy to use, even your dog could do it.</p>
+        </div>
 
-      <div class="feature-box col-lg-4">
-        <i class="fas fa-check-circle fa-4x"></i>
-        <h3>Easy to use.</h3>
-        <p>So easy to use, even your dog could do it.</p>
+        <div class="feature-box col-lg-4">
+          <i class="fas fa-bullseye fa-4x"></i>
+          <h3>Elite Clientele</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
+        </div>
+
+        <div class="feature-box col-lg-4">
+          <i class="fas fa-heart fa-4x"></i>
+          <h3>Guaranteed to work.</h3>
+          <p>Find the love of your dog's life or your money back.</p>
+        </div>
+
       </div>
-
-      <div class="feature-box col-lg-4">
-        <i class="fas fa-bullseye fa-4x"></i>
-        <h3>Elite Clientele</h3>
-        <p>We have all the dogs, the greatest dogs.</p>
-      </div>
-
-      <div class="feature-box col-lg-4">
-        <i class="fas fa-heart fa-4x"></i>
-        <h3>Guaranteed to work.</h3>
-        <p>Find the love of your dog's life or your money back.</p>
-      </div>
-
     </div>
 
   </section>
@@ -117,12 +118,12 @@
   <section id="testimonials">
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item container-fluid"> active">
           <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on PunDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">My dog used to be so lonely, but with PunDog's help, they've found the love of
             their
             life. I think.</h2>
@@ -213,11 +214,13 @@
   <!-- Call to Action -->
 
   <section id="cta">
+    <div class="container-fluid">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button class="btn btn-dark btn-lg download-button" type="button"><i class="fab fa-apple"></i> Download</button>
-    <button class="btn btn-outline-light btn-lg download-button" type="button"><i class="fab fa-google-play"></i>
-      Download</button>
+      <h3>Find the True Love of Your Dog's Life Today.</h3>
+      <button class="btn btn-dark btn-lg download-button" type="button"><i class="fab fa-apple"></i> Download</button>
+      <button class="btn btn-outline-light btn-lg download-button" type="button"><i class="fab fa-google-play"></i>
+        Download</button>
+    </div>
 
   </section>
 
@@ -225,11 +228,14 @@
   <!-- Footer -->
 
   <footer id="footer">
-    <i class="social-icons fab fa-twitter"></i>
-    <i class="social-icons fab fa-facebook-f"></i>
-    <i class="social-icons fab fa-instagram"></i>
-    <i class="social-icons fas fa-envelope"></i>
-    <p>© Copyright 2020 PunDog</p>
+    <div class="container-fluid">
+
+      <i class="social-icons fab fa-twitter"></i>
+      <i class="social-icons fab fa-facebook-f"></i>
+      <i class="social-icons fab fa-instagram"></i>
+      <i class="social-icons fas fa-envelope"></i>
+      <p>© Copyright 2020 PunDog</p>
+    </div>
 
   </footer>
 
